--- a/m.html
+++ b/m.html
@@ -95,6 +95,7 @@
   </style>
 </head>
 <body>
+   <a herf= "www.google.com/reddysnatukodifarm.github.io">click me</a> 
 
   <header>
     <h1>Reddy's country chicken.co🐓</h1>
